# dandelion-server

./: .dockerignore  .gitignore  .pylintrc  Makefile  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
docker/certbot/: Dockerfile
docker/nginx/conf.d/: default.conf  ssl.conf
docker/nginx/conf.d.debug/: default.conf
docker/python/: Dockerfile
docs/: index.md
products/: admin.py  models.py  serializers.py  urls.py  views.py
tests/: test_example.py
