[tool.poetry]
name = "rest-python"
version = "0.1.0"
description = ""
authors = ["ks6088ts <ks6088ts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
django-ckeditor = "^5.9.0"
pillow = "^7.1.2"
mysqlclient = "^1.4.6"
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^2.2.0"
gunicorn = "^20.0.4"
django-cors-headers = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pylint = "^2.5.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
